--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Java CI/CD workflow
 
 on: [push]
 
@@ -15,3 +15,35 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
+
+      - name: Temporarily save jar artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: jar-artifact
+          path: ./target/*.jar
+          retention-days: 1
+
+  deploy:
+    runs-on: ubuntu-18.04
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/download-artifact@v1
+      with:
+          name: jar-artifact
+          path: target/
+    - name: Docker build
+      run: |
+        docker build . -t yassinesayadi/pe-backend:latest
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Docker push
+      run: |
+        docker push yassinesayadi/pe-backend:latest
+        
+
