--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,19 +3,6 @@ name: Java CI/CD workflow
 on: [push]
 
 jobs:
-  Test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: Test project
-        run: mvn test
-
   Publish:
     runs-on: ubuntu-18.04
     needs: Test
@@ -33,5 +20,10 @@ jobs:
     - name: Docker push
       run: |
         docker push yassinesayadi/pe-backend:latest
+
+    - name: Sent post request to Portainer Service Webhook
+      uses: jasongitmail/fast-webhook@v1
+      with:
+        url: ${{ secrets.WEBHOOK_URL }}
         
 
