--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,5 +24,6 @@ jobs:
       uses: jasongitmail/fast-webhook@v1
       with:
         url: ${{ secrets.WEBHOOK_URL }}
+        data: '{}'
         
 
